# contrib_rtfact_4f1d028

./: AUTHORS.txt  CMakeLists.txt  README.txt  RTpie11.doxy  RTremote11.doxy  TODO.txt  initbuilder.bat  initbuilder.sh  rtfact.user.template
bootstrap/: initbuilder.vbs  msgbox.vbs  regread.vbs
cmake-builder/bootstrap/: initbuilder.sh
cmake-builder/modules/: CMakeFlexSupport.cmake  CMakeMetaoptions.cmake  CMakePCHSupport.cmake  CMakeSourceTree.cmake  FindBoost.cmake  FindCONTRIB.cmake  FindCg.cmake  FindDFC.cmake  FindEXPAT.cmake  FindGLEW.cmake  FindInImage.cmake  FindJITRT.cmake  FindJPEG.cmake  FindOIIO.cmake  FindPNG.cmake  FindPhysX.cmake  FindRTSG.cmake  FindRTSG2.cmake  FindRTfactRemote.cmake  FindSDL.cmake  FindSceniX.cmake  FindTBB.cmake  FindZLIB.cmake
contrib/tools/cpuinfo/: Makefile  cpuinfo.sln  cpuinfo.vcproj
contrib/tools/primegen/: Makefile  primegen.sln  primegen.vcproj
demos/RTfactRawDemo/: RTfact.ini  RTfact.objx.sample  RTfactDemo.icproj  RTfactDemo.sln  RTfactDemo.vcproj  RTfactDemo_icc.sln
demos/RTfactRawDemo/src/: AccelStructDebug.cpp.back  AccelStructDebugApplicationContoller.hpp  Main.cpp  Precompiled.cpp  Precompiled.hpp  RTfactConfig.hpp  SConscript
demos/RTfactRemoteDemo/: RTfact.ini
demos/RTfactRemoteDemo/src/: RTfactRemoteDemo.cpp
demos/RTpieDemo/: RTfact.ini
demos/RTpieDemo/src/: RTpieDemo.cpp
demos/iesLights/: test.ies  test2.ies  test4.ies
demos/new_scene_test/: RTfact.ini  RTfact.ini.sample  RTfact.objx.sample  RTfactDemo.icproj  RTfactDemo.sln  RTfactDemo.vcproj  RTfactDemo_SCons.vcproj  RTfactDemo_icc.sln  SConsProject  SConstruct  SceneGraphTests.hpp
demos/new_scene_test/builder/: __init__.py  bconfig.py  btools.py  sbengine.py
demos/new_scene_test/release/: .sconsignatures.dblite  build.conf
demos/new_scene_test/src/: Main.cpp  Precompiled.cpp  Precompiled.hpp  RTfactConfig.hpp  SConscript
demos/rasterizer/: RTfactDemo.sln  RTfactDemo.vcproj
demos/rasterizer/src/: Main.cpp  Precompiled.cpp  Precompiled.hpp  RTfactConfig.hpp
doc/templates/: header.gpl
gadgets/: RSLGlue.cpp  RSLGlue.h  RSLPacketGlue.cpp  ScalarWrapper.cpp  ShaderGlue.cpp
include/RTfact/AnySL/: HaltonFaure.hpp  Material.hpp  Noise.hpp  Perlin.hpp  RTfactShader.hpp  SamplingUtil.hpp  ShaderMath.hpp  ShaderUtil.hpp  TypeInfo.hpp  Vec2f.hpp  Vec3f.hpp  commontypes.hpp  internalapi.hpp  jitrt_rtfact_shader.hpp
include/RTfact/Concept/: Appearance.hpp  Builder.hpp  Camera.hpp  EnvironmentTexture.hpp  Framebuffer.hpp  Image.hpp  ImageSampler.hpp  Integrator.hpp  Intersector.hpp  Light.hpp  LightAttenuation.hpp  ParticleFilter.hpp  ParticleGenerator.hpp  ParticleStorage.hpp  PixelSampler.hpp  Postprocessor.hpp  Primitive.hpp  Renderer.hpp  Scene.hpp  ShaderEffect.hpp  Texture.hpp
include/RTfact/Config/: Common.hpp  ExternalIncludes.hpp  Init.hpp  RTfactConfig.default.hpp
include/RTfact/Foundations/: Parameterizable.hpp  ReferenceCounted.hpp
include/RTfact/Utils/: BBox.hpp  BoundingSphere.hpp  Distribution.hpp  EnvLightGen.hpp  EnvMapConverter.hpp  FPSMeter.hpp  Factory.hpp  FramebufferUtils.hpp  ImageClipRegion.hpp  ImageTraitUtils.hpp  Matrix4f.hpp  MersenneTwister.h  MipMap.hpp  PatchSampler.h  Picking.hpp  Range.hpp  RayPacket.hpp  ReferenceCounted.hpp  (+10 more)
include/RTpie/: IRayTracer.hpp
include/RTpieCpp/: RayTracerHandle.hpp
include/RTremote/: Effect.hpp  Geometry.hpp  GraphEntity.hpp  Group.hpp  Parameterizable.hpp  Picking.hpp  Postprocessor.hpp  PostprocessorParameter.hpp  RTAppearance.hpp  RTImage.hpp  RTLight.hpp  ReferenceCounted.hpp  Renderer.hpp
remote/: demo.sh  demo2.sh  demoRSL.sh  demo_museum.sh  demo_tv.sh  measure_performance_2pl.sh  measure_performance_rsl_2pl.sh  render_wrl.sh  run_museum.sh  testallcppold.sh  testallcppplane.sh  testpktcpp.sh  testpktrsl.sh  testscalarcpp.sh  testscalarrsl.sh  whitted_raytrace.wrl
remote/scenes/: AbstractSciFi.wrl  AnySL_Columns.wrl  AnySL_Columns_CameraAnimationComparison.wrl  AnySL_Columns_RSL.wrl  AnySL_Columns_RSL_pkt.wrl  AnySL_Columns_pkt.wrl  TVSet_Final3.wrl  TVSet_Final6.wrl  TVSet_Final7.wrl  box.x3dv  box2.x3dv  derivx.wrl  error1.x3dv  error2.x3dv  lava.wrl  museum.wrl  museum_ground_anysl21.wrl  museum_ground_anysl22.wrl  pom2.x3dv  rsl.x3dv  rsl2.x3dv  rsl3.x3dv  rsl4.x3dv  rsl5.x3dv  rsl6.x3dv  rslc.x3dv  rsld.x3dv  sphere.x3dv  sphere_box_vp1.x3dv  sphere_box_vp2.x3dv  sphere_boxplane.x3dv  spiral.x3dv  teapot_box_vp1.x3dv  teapot_box_vp2.x3dv  teapot_box_vp3.x3dv  teapot_box_vp4.x3dv  teapot_vp1.x3dv  texture.x3dv  texture_mix.x3dv  time.x3dv
remote/src/: CXXShaderManager.cpp  CXXShaderManager.hpp  Effect.cpp  Geometry.cpp  Group.cpp  Picking.cpp  Postprocessor.cpp  PostprocessorParameter.cpp  PostprocessorParameterValue.hpp  Precompiled.cpp  Precompiled.hpp  RSLShaderManager.cpp  RSLShaderManager.hpp  RTAnySLShader.cpp  RTAnySLShader.hpp  RTAnySLShaderAPI.hpp  RTAnySLShaderBase.hpp  RTBasicPhongShader.hpp  RTDirectionalLight.hpp  RTGlassShader.hpp  RTIESAreaLight.hpp  RTIESLight.hpp  RTImageImpl.hpp  RTLambMaterial.hpp  RTNormalShader.hpp  RTPhongShader.hpp  RTPlasticShader.hpp  RTPointLight.hpp  RTPrivateAppearance.hpp  RTPrivateLight.hpp  RTPrivatePostprocessor.hpp  RTQuadLight.hpp  RTSpotLight.hpp  RTTestShader.hpp  RTTriangleLight.hpp  RTfactRemoteConfig.hpp  RTfactShaderEntryTableMaker.cpp  RTfactShaderEntryTableMaker.hpp  RTremotePrivateConfig.hpp  Renderer.cpp  (+16 more)
rtpie/src/: InterfaceIIDs.cpp
shaders/: build_cxx_shader.sh  build_rsl_shader.sh
shaders/src/: AlphaShader.cpp  ApiShader.cpp  BrickShader.cpp  CheckerReflectiveShader.cpp  CheckerShader.cpp  DentedShader.cpp  DepthShader.cpp  GlassShader.cpp  GraniteShader.cpp  LightProbeShader.cpp  MandelbrotShader.cpp  MirrorShader.cpp  NormalShader.cpp  ParquetPlankShader.cpp  PhongShader.cpp  PhongShaderGI.cpp  ReflectiveParquetPlankShader.cpp  ReliefMappingShader.cpp  ScreenAAShader.cpp  StarballGlassShader.cpp  StarballShader.cpp  TestShader.cpp  TextureMixShader.cpp  TextureShader.cpp  TexturedPhongShader.cpp  TimeShader.cpp  WhittedShader.cpp  WoodShader.cpp
tools/: add_copyright.sh  insert_copyright.sh
(+627 files in other folders)
